# slidev-presentations

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pixi.toml  pnpm-lock.yaml  slides.md  tsconfig.json
.github/: dependabot.yml
2022-04-petsc-update/: slides.md
2022-05-imod-coupler-update/: slides.md
2022-07-modflow-conda/: slides.md
2022-10-lumbricus-kick-off/: slides.md
2023-09-pixi/: slides.md
2024-02-munich-meetup/: global-bottom.vue  slides.md
2024-02-munich-meetup/snippets/pixi-task-add/: hello.py
2025-02-munich-meetup/: global-bottom.vue  slides.md
2025-02-munich-meetup/public/: README.md
2025-02-munich-meetup/snippets/pixi-init/: pixi.toml
2025-02-munich-meetup/snippets/pixi-multi-env/: hello.py
2025-06-scientific-rust/: slides.md
2025-06-scientific-rust/snippets/geos-rs/: pixi.toml
2025-06-scientific-rust/snippets/geos-rs-final/: Cargo.toml
2025-06-scientific-rust/snippets/geos-rs-initial/: pixi.toml
2025-07-europython-main-presentation/: global-bottom.vue  slides.md
2025-07-europython-main-presentation/snippets/pixi-deps-add/: hello.py  pyproject.toml
2025-07-europython-main-presentation/snippets/pixi-init/: pyproject.toml
2025-07-europython-main-presentation/snippets/pixi-multi-env/: pyproject.toml
2025-07-europython-main-presentation/snippets/pixi-pyproject-base/: pyproject.toml
2025-07-europython-main-presentation/snippets/pixi-task-add/: pyproject.toml
2025-07-europython-rust-summit/: slides.md
2025-07-europython-rust-summit/demo/1/: math_demo.py
scripts/: picker.ts
(+25 files in other folders)
