[project]
name = "demo"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["cowpy"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
hello = "python -m demo"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
py312 = ["py312"]
py313 = ["py313"]
